--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="category-btns">
-                    <h1>Select a category</h1>
+                    <h1 class="select-title">Select a category</h1>
                     <button id="animals" class="category-btn">Animals</button>
                     <button id="food" class="category-btn">Food</button>
                     <button id="jobs" class="category-btn">Jobs</button>
